# dafactory

./: .gitignore  BACKLOG.md  CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  SPEC.md  release.toml
.github/workflows/: ci.yml  release.yml
adr/: 0001-agent-and-judge-are-swappable-injectable-interfaces.md  0002-holdout-enforced-by-construction.md  0003-registry-is-the-only-owned-state.md  0004-extend-by-dogfooding.md  0005-stack-rust-clap.md  0006-the-unit-of-output-is-an-evidence-bundle.md  0007-single-binary-crate-for-v0.md  0008-judge-has-a-scripted-provider-symmetric-to-the-agent.md  0009-agents-are-subprocesses-run-observes-them-via-git.md  0010-run-validates-every-pass-and-no-op-is-earned.md  0011-holdout-enforcement-is-a-construction-boundary-in-v0.md  0012-run-exit-code-reflects-the-terminal-state.md  0013-sandbox-isolation-upgrade.md  0014-model-heterogeneity-and-provider-routing.md  0015-post-v0-capability-ordering.md  0016-human-in-the-loop-control-plane.md  0017-real-providers-run-claude-with-skip-permissions.md  0018-environment-and-build-scaffolding-via-devenv.md  0019-scenarios-command-scenario-authoring-bootstrapping.md  0020-ci-pipeline-and-release-via-cargo-release.md
src/: backlog.rs  cli.rs  clock.rs  evidence.rs  git.rs  main.rs  paths.rs  registry.rs  templates.rs
src/agent/: mod.rs  real.rs  scripted.rs
src/commands/: init.rs  ls.rs  mod.rs  run.rs  scenarios.rs  validate.rs
src/judge/: mod.rs  real.rs  scripted.rs
templates/code/: .gitignore  BACKLOG.md  CLAUDE.md  PROGRESS.md  (+1 more)
tests/: exit_codes.rs  loop_run.rs  progress_output.rs
(+13 files in other folders)
