[package]
name = "factory"
version = "0.0.0"
edition = "2021"
description = "Wraps a coding agent with held-out validation, explicit terminal states, and an evidence bundle as the unit of output."

[[bin]]
name = "factory"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
anyhow = "1"
comfy-table = "7"

[dev-dependencies]
tempfile = "3"
